# CoinLedger

./: .clang-format  .gitignore  CMakeLists.txt
CMakeModules/: FindCSV.cmake  FindCURLPP.cmake  FindHTMLCXX.cmake  FindJSONCPP.cmake  FindLibXML++.cmake  LibFindMacros.cmake
scripts/: download_miningpoolhub.py  get_electrum-xvg_timestamps.py  make_account_tree.py  taxes.py  test.py  txns.py
src/: Account.cpp  Account.hpp  Amount.cpp  Amount.hpp  Balance.cpp  Balance.hpp  CMakeLists.txt  Coin.cpp  Coin.hpp  CoinLedger.i  Datetime.cpp  Datetime.hpp  File.cpp  File.hpp  PriceSource.cpp  PriceSource.hpp  Split.cpp  Split.hpp  Transaction.cpp  Transaction.hpp  UUID.hpp
src/importers/: Binance.cpp  Binance.hpp  Bittrex.cpp  Bittrex.hpp  CMakeLists.txt  CSV.cpp  CSV.hpp  CelsiusWallet.cpp  CelsiusWallet.hpp  CoreWallet.cpp  CoreWallet.hpp  ETHAccount.cpp  ETHAccount.hpp  ETHECR20Account.cpp  ETHECR20Account.hpp  ElectrumWallet.cpp  ElectrumWallet.hpp  GDAX.cpp  GDAX.hpp  Kraken.cpp  Kraken.hpp  MiningPoolHub.cpp  MiningPoolHub.hpp  NiceHash.cpp  NiceHash.hpp  XRPAccount.cpp  XRPAccount.hpp
src/prices/: CMakeLists.txt  Candles.cpp  Candles.hpp  DailyData.cpp  DailyData.hpp  H5Helper.cpp  H5Helper.hpp  PriceSource.cpp  PriceSource.hpp
src/taxes/: Acquisition.hpp  Basis.cpp  Basis.hpp  CMakeLists.txt  Inventory.cpp  Inventory.hpp  Taxes.cpp  Taxes.hpp
